--- a/project-assistant-pro/package.json
+++ b/project-assistant-pro/package.json
@@ -2,16 +2,17 @@
   "name": "project-assistant-pro",
   "version": "3.0.0",
   "description": "Advanced AI-powered tool for Next.js/React Development with Matrix-style UI Interface",
-  "main": "index.js",
+  "main": "app.js",
   "bin": {
-    "project-assistant": "./index.js"
+    "project-assistant": "./app.js"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "setup": "node setup.js",
     "install-deps": "node install.js",
-    "server": "node index.js --server-only",
-    "cli": "node index.js --cli-only",
+    "server": "node app.js --server-only",
+    "cli": "node app.js --cli-only",
     "test": "jest",
     "build": "webpack --config webpack.config.js",
     "lint": "eslint ."
@@ -26,22 +27,39 @@
     "react",
     "development",
     "assistant",
-    "code-generation"
+    "code-generation",
+    "script",
+    "generator",
+    "automation"
   ],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "archiver": "^5.3.1",
+    "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
+    "compression": "^1.8.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "express-session": "^1.17.3",
     "express-ws": "^5.0.2",
     "fs-extra": "^11.1.1",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.0",
     "open": "^8.4.2",
-    "socket.io": "^4.7.2"
+    "openai": "^4.0.0",
+    "session-file-store": "^1.5.0",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.0",
+    "winston": "^3.17.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "eslint": "^8.49.0",
     "jest": "^29.6.4",
+    "nodemon": "^3.0.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
